
	All the settings should save now, so if something doesn't work or I
	missed something, report it as a bug.

	HOWEVER!  Keep in mind that "Save Settings..." saves to a file called
	user.cfg in the current theme directory.  This means two things.  One,
	if you do not have write permissions to the current theme directory
	($ETERM_THEME_ROOT), it will fail.  Two, if you save settings to the
	default (Eterm) theme, these settings will override ALL your other
	themes!  If you save settings to the default theme, you better expect
	to get those settings everywhere, unless the other themes also contain
	user.cfg files.
	
-------------------------------------------------------------------------------
Thu Nov 11 18:25:07 PST 1999	Michael Jennings <mej@eterm.org>

	The man page should now be up-to-date for Eterm 0.9.  Please check it
	to make sure. :-)  I also fixed a few minor nits here.
	
-------------------------------------------------------------------------------
Fri Nov 12 17:55:05 PST 1999	Michael Jennings <mej@eterm.org>

	This should bring the technical reference up-to-date.  Eterm IPC is
	now documented for the first time.
	
-------------------------------------------------------------------------------
Fri Nov 12 19:37:35 PST 1999	Michael Jennings <mej@eterm.org>

	Okay, I've fixed a lot here.  First off, I fixed the bug Gnea
	<gnea@rochester.rr.com> pointed out with toggling Max Size in E.
	Turned out to be a symptom of a much larger problem, but it should be
	fixed now.  Then I corrected the XIM issues pointed out by Sung-Hyun
	Nam <namsh@lgic.co.kr> and Jerome De Greef
	<jerome_degreef@hotmail.com>, as well as a stupid typo on my part that
	Jerome happened upon.  Next I fixed the bug Adam Lucas
	<ALucas@wcom.net> spotted with changing the scrollbar type.  While
	fixing that, I also fixed changing the scrollbar width.  Both
	operations are a lot smoother and cleaner now.
	
-------------------------------------------------------------------------------